--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="container">
         <div id="display">
-            <div id="display-history">3000</div>
-            <div id="current">200</div>
+            <div id="display-history"></div>
+            <div id="current">0</div>
         </div>
         <div id="buttons-container">
             <div class="button other">AC</div>
@@ -37,4 +37,5 @@
         </div>
     </div>
 </body>
+<script src="./calculator.js"></script>
 </html>
