basic working functionality off calculator is implemented
Basic functionality, still needs some improvement

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 <body>
     <div id="container">
         <div id="display">
-            <div id="display-history"></div>
-            <div id="current">0</div>
+            <div data-history-display id="display-history"></div>
+            <div data-current-display id="current"></div>
         </div>
         <div id="buttons-container">
-            <div class="button other">AC</div>
-            <div class="button other">+/-</div>
-            <div class="button other">%</div>
-            <div class="button operator">/</div>
-            <div class="button number">7</div>
-            <div class="button number">8</div>
-            <div class="button number">9</div>
-            <div class="button operator">x</div>
-            <div class="button number">4</div>
-            <div class="button number">5</div>
-            <div class="button number">6</div>
-            <div class="button operator">-</div>
-            <div class="button number">1</div>
-            <div class="button number">2</div>
-            <div class="button number">3</div>
-            <div class="button operator">+</div>
-            <div class="button number" id="button-zero">0</div>
-            <div class="button number">.</div>
-            <div class="button operator">=</div>
+            <div data-all-clear class="button other">AC</div>
+            <div data-plus-minus class="button other">+/-</div>
+            <div data-procentage class="button other">%</div>
+            <div data-operation class="button operator">/</div>
+            <div data-number class="button number">7</div>
+            <div data-number class="button number">8</div>
+            <div data-number class="button number">9</div>
+            <div data-operation class="button operator">x</div>
+            <div data-number class="button number">4</div>
+            <div data-number class="button number">5</div>
+            <div data-number class="button number">6</div>
+            <div data-operation class="button operator">-</div>
+            <div data-number class="button number">1</div>
+            <div data-number class="button number">2</div>
+            <div data-number class="button number">3</div>
+            <div data-operation class="button operator">+</div>
+            <div data-number class="button number" id="button-zero">0</div>
+            <div data-number class="button number">,</div>
+            <div data-equals class="button operator">=</div>
 
         </div>
     </div>
