decimal point fixed
it has not been working cuz i wrote , insted of . in html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div data-number class="button number">3</div>
             <div data-operation class="button operator">+</div>
             <div data-number class="button number" id="button-zero">0</div>
-            <div data-number class="button number">,</div>
+            <div data-number class="button number">.</div>
             <div data-equals class="button operator">=</div>
 
         </div>
